// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getAvailableScripturePaneSelections getAvailableScripturePaneSelections() should work without targetBible loaded into resources 1`] = `
Array [
  Object {
    "bibleId": "ult",
    "bookId": "gal",
    "languageId": "en",
    "manifest": "manifest",
  },
  Object {
    "bibleId": "ust",
    "bookId": "gal",
    "languageId": "en",
    "manifest": "manifest",
  },
  Object {
    "bibleId": "ugnt",
    "bookId": "gal",
    "languageId": "originalLanguage",
    "manifest": "manifest",
  },
]
`;

exports[`getAvailableScripturePaneSelections should work 1`] = `
Array [
  Object {
    "bibleId": "targetBible",
    "bookId": "gal",
    "languageId": "targetLanguage",
    "manifest": "manifest",
  },
  Object {
    "bibleId": "ult",
    "bookId": "gal",
    "languageId": "en",
    "manifest": "manifest",
  },
  Object {
    "bibleId": "ust",
    "bookId": "gal",
    "languageId": "en",
    "manifest": "manifest",
  },
  Object {
    "bibleId": "ugnt",
    "bookId": "gal",
    "languageId": "originalLanguage",
    "manifest": "manifest",
  },
]
`;

exports[`getAvailableScripturePaneSelections should work OT 1`] = `
Array [
  Object {
    "bibleId": "targetBible",
    "bookId": "jol",
    "languageId": "targetLanguage",
    "manifest": "manifest",
  },
  Object {
    "bibleId": "uhb",
    "bookId": "jol",
    "languageId": "originalLanguage",
    "manifest": "manifest",
  },
]
`;

exports[`getResourcesNeededByTool() should work 1`] = `
Array [
  Object {
    "bibleId": "ult",
    "languageId": "en",
  },
  Object {
    "bibleId": "ugnt",
    "languageId": "el-x-koine",
  },
  Object {
    "bibleId": "ust",
    "languageId": "en",
  },
]
`;

exports[`updateGroupIndexForGl() should succeed 1`] = `
Object {
  "groupId": "figs-explicit",
  "occurrence": 1,
  "occurrenceNote": "Your language may require that what the people heard and whom they trusted be stated explicitly. Alternate translation: \\"because you heard the message and had faith in Jesus\\" or \\"because you listened to the message and trusted in Jesus\\" (See: [[rc://en/ta/man/translate/figs-explicit]])",
  "reference": Object {
    "bookId": "gal",
    "chapter": 3,
    "verse": 5,
  },
  "tool": "translationNotes",
}
`;
